test/unit-tests/errors/greater-than-match-error.spec.d.ts
export declare class GreaterThanMatchErrorTests {
    shouldBeGreaterThanMessage(actualValue: number, lowerLimit: number): void;
    shouldNotBeGreaterThanMessage(actualValue: number, lowerLimit: number): void;
}
